[profile.release]
panic = 'unwind'

[workspace]
members = [
    'node',
    'pallets/bylaws',
    'pallets/coin-voting',
    'pallets/compat',
    'pallets/conviction-voting',
    'pallets/organizations',
    'pallets/plcr-voting',
    'pallets/tokens',
    'primitives',
    'runtime',
    'support',
]