[package]
build = 'build.rs'
edition = '2018'
license = 'Apache 2.0'
name = 'governance-os-node'
version = '0.1.0'

[[bin]]
name = 'governance-os-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '2.0.0'

[dependencies]
frame-benchmarking = '2.0.0'
frame-benchmarking-cli = '2.0.0'
governance-os-pallet-organizations = { path = '../pallets/organizations' }
governance-os-pallet-tokens = { path = '../pallets/tokens' }
governance-os-primitives = { path = '../primitives' }
governance-os-runtime = { path = '../runtime' }
governance-os-voting = { path = '../voting' }
jsonrpc-core = '15.1.0'
log = '0.4.8'
pallet-transaction-payment-rpc = '2.0.0'
sc-basic-authorship = '0.8.0'
sc-cli = '0.8.0'
sc-client-api = '2.0.0'
sc-consensus = '0.8.0'
sc-consensus-aura = '0.8.0'
sc-executor = '0.8.0'
sc-finality-grandpa = '0.8.0'
sc-rpc = '2.0.0'
sc-rpc-api = '0.8.0'
sc-service = '0.8.0'
sc-transaction-pool = '2.0.0'
sp-api = '2.0.0'
sp-block-builder = '2.0.0'
sp-blockchain = '2.0.0'
sp-consensus = '0.8.0'
sp-consensus-aura = '0.8.0'
sp-core = '2.0.0'
sp-finality-grandpa = '2.0.0'
sp-inherents = '2.0.0'
sp-runtime = '2.0.0'
sp-transaction-pool = '2.0.0'
structopt = '0.3.20'
substrate-frame-rpc-system = '2.0.0'

[features]
default = ['wasmtime']
runtime-benchmarks = ['governance-os-runtime/runtime-benchmarks']
wasmtime = [
    'sc-cli/wasmtime',
    'sc-executor/wasmtime',
    'sc-service/wasmtime',
]