[package]
build = 'build.rs'
edition = '2018'
license = 'Apache 2.0'
name = 'governance-os-node'
version = '0.1.0'

[[bin]]
name = 'governance-os-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = "3.0.0"

[dependencies]
frame-benchmarking = "3.1.0"
frame-benchmarking-cli = "3.0.0"
governance-os-pallet-coin-voting = { path = '../pallets/coin-voting' }
governance-os-pallet-organizations = { path = '../pallets/organizations' }
governance-os-pallet-tokens = { path = '../pallets/tokens' }
governance-os-primitives = { path = '../primitives' }
governance-os-runtime = { path = '../runtime' }
jsonrpc-core = "15.1.0"
log = "0.4.14"
pallet-transaction-payment-rpc = "3.0.0"
sc-basic-authorship = "0.9.0"
sc-cli = "0.9.0"
sc-client-api = "3.0.0"
sc-consensus = "0.9.0"
sc-consensus-aura = "0.9.0"
sc-executor = "0.9.0"
sc-finality-grandpa = "0.9.0"
sc-rpc = "3.0.0"
sc-rpc-api = "0.9.0"
sc-service = "0.9.0"
sc-transaction-pool = "3.0.0"
sp-api = "3.0.0"
sp-block-builder = "3.0.0"
sp-blockchain = "3.0.0"
sp-consensus = "0.9.0"
sp-consensus-aura = "0.9.0"
sp-core = "3.0.0"
sp-finality-grandpa = "3.0.0"
sp-inherents = "3.0.0"
sp-runtime = "3.0.0"
sp-transaction-pool = "3.0.0"
structopt = "0.3.21"
substrate-frame-rpc-system = "3.0.0"

[features]
default = ['wasmtime']
runtime-benchmarks = ['governance-os-runtime/runtime-benchmarks']
wasmtime = [
    'sc-cli/wasmtime',
    'sc-executor/wasmtime',
    'sc-service/wasmtime',
]