[package]
name = 'governance-os-primitives'
version = '0.1.0'
edition = '2018'
license = 'Apache-2.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', default-features = false, features = ['derive'], version = "2.1.0" }
frame-system = { version = "3.0.0", default-features = false }
governance-os-pallet-bylaws = { path = '../pallets/bylaws', default-features = false }
governance-os-pallet-organizations = { path = '../pallets/organizations', default-features = false }
governance-os-pallet-tokens = { path = '../pallets/tokens', default-features = false }
governance-os-support = { path = '../support', default-features = false }
serde = { version = "1.0.125", optional = true }
sp-application-crypto = { version = "3.0.0", default-features = false }
sp-core = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-system/std',
	'governance-os-pallet-bylaws/std',
	'governance-os-pallet-organizations/std',
	'governance-os-pallet-tokens/std',
	'governance-os-support/std',
	'serde',
	'sp-application-crypto/std',
	'sp-core/std',
	'sp-runtime/std',
    'sp-std/std',
]
