[package]
edition = '2018'
license = 'Apache 2.0'
name = 'governance-os-runtime'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
wasm-builder-runner = { package = 'substrate-wasm-builder-runner', version = '1.0.5' }

# alias 'parity-scale-code' to 'codec'
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-benchmarking = { version = '2.0.0', default-features = false, optional = true }
frame-executive = { version = '2.0.0', default-features = false }
frame-support = { version = '2.0.0', default-features = false }
frame-system = { version = '2.0.0', default-features = false }
frame-system-benchmarking = { default-features = false, version = '2.0.0', optional = true }
frame-system-rpc-runtime-api = { version = '2.0.0', default-features = false }
governance-os-pallet-tokens = { default-features = false, path = '../pallets/tokens' }
governance-os-primitives = { default-features = false, path = '../primitives' }
pallet-aura = { version = '2.0.0', default-features = false }
pallet-grandpa = { version = '2.0.0', default-features = false }
pallet-randomness-collective-flip = { version = '2.0.0', default-features = false }
pallet-timestamp = { version = '2.0.0', default-features = false }
pallet-transaction-payment = { version = '2.0.0', default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = '2.0.0', default-features = false }
serde = { version = '1.0.116', optional = true }
sp-api = { version = '2.0.0', default-features = false }
sp-block-builder = { version = '2.0.0', default-features = false }
sp-consensus-aura = { version = '0.8.0', default-features = false }
sp-core = { version = '2.0.0', default-features = false }
sp-inherents = { version = '2.0.0', default-features = false }
sp-offchain = { version = '2.0.0', default-features = false }
sp-runtime = { version = '2.0.0', default-features = false }
sp-session = { version = '2.0.0', default-features = false }
sp-transaction-pool = { version = '2.0.0', default-features = false }
sp-std = { version = '2.0.0', default-features = false }
sp-version = { version = '2.0.0', default-features = false }
static_assertions = '1.1.0'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'governance-os-pallet-tokens/std',
    'governance-os-primitives/std',
    'pallet-aura/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'governance-os-pallet-tokens/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]