[package]
edition = '2018'
license = 'Apache 2.0'
name = 'governance-os-runtime'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = "4.0.0"

[dependencies]
codec = { package = 'parity-scale-codec', default-features = false, features = ['derive'], version = "2.1.0" }
frame-benchmarking = { version = "3.1.0", default-features = false, optional = true }
frame-executive = { version = "3.0.0", default-features = false }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
frame-system-benchmarking = { default-features = false, version = "3.0.0", optional = true }
frame-system-rpc-runtime-api = { version = "3.0.0", default-features = false }
governance-os-pallet-bylaws = { default-features = false, path = '../pallets/bylaws' }
governance-os-pallet-coin-voting = { default-features = false, path = '../pallets/coin-voting' }
governance-os-pallet-compat = { default-features = false, path = '../pallets/compat' }
governance-os-pallet-conviction-voting = { default-features = false, path = '../pallets/conviction-voting' }
governance-os-pallet-organizations = { default-features = false, path = '../pallets/organizations' }
governance-os-pallet-plcr-voting = { default-features = false, path = '../pallets/plcr-voting' }
governance-os-pallet-tokens = { default-features = false, path = '../pallets/tokens' }
governance-os-primitives = { default-features = false, path = '../primitives' }
governance-os-support = { default-features = false, path = '../support' }
pallet-aura = { version = "3.0.0", default-features = false }
pallet-grandpa = { version = "3.0.0", default-features = false }
pallet-randomness-collective-flip = { version = "3.0.0", default-features = false }
pallet-timestamp = { version = "3.0.0", default-features = false }
pallet-transaction-payment = { version = "3.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0", default-features = false }
serde = { version = "1.0.125", optional = true }
sp-api = { version = "3.0.0", default-features = false }
sp-block-builder = { version = "3.0.0", default-features = false }
sp-consensus-aura = { version = "0.9.0", default-features = false }
sp-core = { version = "3.0.0", default-features = false }
sp-inherents = { version = "3.0.0", default-features = false }
sp-offchain = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-session = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-transaction-pool = { version = "3.0.0", default-features = false }
sp-version = { version = "3.0.0", default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'governance-os-pallet-bylaws/std',
    'governance-os-pallet-coin-voting/std',
    'governance-os-pallet-compat/std',
    'governance-os-pallet-conviction-voting/std',
    'governance-os-pallet-organizations/std',
    'governance-os-pallet-plcr-voting/std',
    'governance-os-pallet-tokens/std',
    'governance-os-primitives/std',
    'governance-os-support/std',
    'pallet-aura/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'governance-os-pallet-bylaws/runtime-benchmarks',
    'governance-os-pallet-tokens/runtime-benchmarks',
    'pallet-grandpa/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]