
[package]
edition = '2018'
license = 'Apache 2.0'
name = 'governance-os-support'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { version = '2.0.0', default-features = false }
sp-runtime = { version = '2.0.0', default-features = false }
sp-std = { version = '2.0.0', default-features = false }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
    'sp-runtime/std',
	'sp-std/std',
]
