
[package]
edition = '2018'
license = 'Apache 2.0'
name = 'governance-os-support'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', default-features = false, features = ['derive'], version = '2.1.0' }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
serde = { version = "1.0.125", optional = true }
sp-runtime = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'serde',
    'sp-runtime/std',
	'sp-std/std',
]
runtime-benchmarks = []