
[package]
edition = '2018'
license = 'Apache 2.0'
name = 'governance-os-voting'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
governance-os-support = { path = '../support', default-features = false }
serde = { version = '1.0.116', optional = true }
sp-runtime = { version = '2.0.0', default-features = false }
sp-std = { version = '2.0.0', default-features = false }

[dev-dependencies]
frame-support = '2.0.0'
frame-system = '2.0.0'
governance-os-pallet-bylaws = { path = '../pallets/bylaws' }
governance-os-pallet-tokens = { path = '../pallets/tokens' }
sp-core = '2.0.0'
sp-io = '2.0.0'

[features]
default = ['std']
std = [
    'codec/std',
    'governance-os-support/std',
    'serde',
    'sp-runtime/std',
    'sp-std/std',
]