[package]
edition = '2018'
license = 'Apache 2.0'
name = 'governance-os-pallet-compat'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', default-features = false, features = ['derive'], version = '2.1.0' }
frame-support = { default-features = false, version = "3.0.0" }
frame-system = { default-features = false, version = "3.0.0" }
governance-os-pallet-bylaws = { default-features = false, path = '../bylaws' }
governance-os-support = { default-features = false, path = '../../support' }
sp-runtime = { default-features = false, version = "3.0.0" }
sp-std = { default-features = false, version = "3.0.0" }

[dev-dependencies]
serde = "1.0.125"
sp-core = "3.0.0"
sp-io = "3.0.0"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'governance-os-pallet-bylaws/std',
    'governance-os-support/std',
    'sp-runtime/std',
    'sp-std/std',
]