[package]
edition = '2018'
license = 'Apache 2.0'
name = 'governance-os-pallet-conviction-voting'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias 'parity-scale-code' to 'codec'
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
governance-os-support = { default-features = false, path = '../../support' }
serde = { version = '1.0.116', optional = true }
sp-runtime = { default-features = false, version = '2.0.0' }
sp-std = { default-features = false, version = "2.0.0" }

[dev-dependencies]
governance-os-pallet-bylaws = { path = '../bylaws' }
governance-os-pallet-tokens = { path = '../tokens' }
serde = '1.0.116'
sp-core = '2.0.0'
sp-io = '2.0.0'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'governance-os-support/std',
    'serde',
    'sp-runtime/std',
    'sp-std/std',
]