[package]
edition = '2018'
license = 'Apache 2.0'
name = 'governance-os-pallet-organizations'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', default-features = false, features = ['derive'], version = "2.1.0" }
frame-support = { default-features = false, version = "3.0.0" }
frame-system = { default-features = false, version = "3.0.0" }
governance-os-support = { default-features = false, path = '../../support' }
serde = { version = "1.0.125", optional = true }
sp-runtime = { default-features = false, version = "3.0.0" }
sp-std = { default-features = false, version = "3.0.0" }

# Used by frame_support::debug::* macros.
sp-io = { default-features = false, version = "3.0.0" }

[dev-dependencies]
governance-os-pallet-bylaws = { path = '../bylaws' }
serde = "1.0.125"
sp-core = "3.0.0"
sp-io = "3.0.0"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'governance-os-support/std',
    'serde',
    'sp-runtime/std',
    'sp-std/std',
]