[package]
edition = '2018'
license = 'Apache 2.0'
name = 'governance-os-pallet-tokens'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', default-features = false, features = ['derive'], version = '2.1.0' }
frame-benchmarking = { default-features = false, version = '3.1.0', optional = true }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
governance-os-support = { default-features = false, path = '../../support' }
log = { version = "0.4.14", default-features = false }
serde = { version = '1.0.125', optional = true }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }

[dev-dependencies]
governance-os-pallet-bylaws = { path = '../bylaws' }
sp-core = '3.0.0'
sp-io = '3.0.0'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-benchmarking/std',
    'frame-support/std',
    'frame-system/std',
    'governance-os-support/std',
    'log/std',
    'serde',
    'sp-runtime/std',
    'sp-std/std',
]
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-system/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]